# Secure-Renewals-2

./: .dockerignore  .gitignore  .replit  APPLICATION_BLUEPRINT.md  AZURE_DEPLOYMENT_ANALYSIS.md  AZURE_DEPLOYMENT_FILES.md  AZURE_NAVIGATION.md  AZURE_QUICK_REFERENCE.md  BRANCH_PUSH_NOTE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FEATURES_TO_FORK.md  FEATURE_EXTRACTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  NEW_REPOSITORY_SUMMARY.md  NEW_REPO_CREATION_GUIDE.md  NEW_REPO_QUICK_CHECKLIST.md  PASS_GENERATION_GUIDE.md  QUICK_REPO_SETUP.md  QUICK_START.md  README.md  RECOMMENDATIONS.md  RECRUITMENT_SYSTEM_README.md  REVIEW.md  REVIEW_SUMMARY.md  SECURITY.md  SOLUTION_SUMMARY.md  START_HERE.md  app.py  azure-pipelines-deploy.yml  azure-pipelines.yml  deploy_to_azure.sh  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml  replit.md  (+6 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241001_0001_initial_tables.py  20241231_0002_add_employees_table.py  20241231_0003_add_system_settings_table.py  20241231_0004_add_passes_table.py  20260104_0009_add_uae_compliance_fields.py  20260106_0010_add_interview_tables.py  20260108_0012_add_eoy_nominations_table.py  20260108_0013_fix_nomination_unique_constraint.py  20260108_0014_add_masterfile_fk_links.py  20260108_0015_backfill_masterfile_fk_data.py  20260108_0017_add_pass_feedback_table.py  20260108_0018_add_nominator_unique_constraint.py  20260108_0018_add_renewal_status_fields.py  20260109_0019_enhance_attendance_uae_compliance.py  20260109_0019_fix_production_data.py  20260109_0020_add_food_allowance_exceptional_overtime.py  20260109_0021_add_location_remarks_wfh_confirmation.py
backend/app/: database.py  main.py  seed_employees.json  startup_migrations.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: __init__.py  attendance.py  (+9 more)
backend/static/: glass-sample-page.html  index.html
(+213 files in other folders)
