[project]
name = "secure-renewals-backend"
version = "0.1.0"
description = "Secure Renewals internal API"
authors = [{name = "Secure Renewals", email = "security@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.6.1",
    "SQLAlchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true
